feat: add openapi specs for scanner plugin
