# api/openapi.yaml
@@ -1774,6 +1774,8 @@ components:
           type: integer
         totalVulnerabilities:
           $ref: '#/components/schemas/VulnerabilityScanSummary'
+        totalPlugins:
+          type: integer
 
     VulnerabilityScanSummary:
       description: A summary of number of vulnerabilities found per severity.
@@ -1820,6 +1822,8 @@ components:
           $ref: '#/components/schemas/ExploitsConfig'
         infoFinder:
           $ref: '#/components/schemas/InfoFinderConfig'
+        plugins:
+          $ref: '#/components/schemas/PluginsConfig'
 
     InfoFinderConfig:
       type: object
@@ -1900,6 +1904,30 @@ components:
           type: array
           items:
             type: string
+
+    PluginsConfig:
+      type: object
+      properties:
+        enabled:
+          type: boolean
+        scanners_list:
+          type: array
+          items:
+            type: string
+        scanners_config:
+          type: object
+          additionalProperties:
+            $ref: '#/components/schemas/PluginScannerConfig'
+
+    PluginScannerConfig:
+      type: object
+      properties:
+        image_name:
+          type: string
+        output_dir:
+          type: string
+        config:
+          type: string
 
     ScanConfigs:
       type: object
@@ -2425,6 +2453,8 @@ components:
               $ref: '#/components/schemas/ExploitScan'
             infoFinder:
               $ref: '#/components/schemas/InfoFinderScan'
+            plugins:
+              $ref: '#/components/schemas/PluginScan'
             findingsProcessed:
               type: boolean
             resourceCleanupStatus:
@@ -2616,6 +2646,10 @@ components:
           items:
             $ref: '#/components/schemas/AssetScanInputScanStats'
         infoFinder:
+          type: array
+          items:
+            $ref: '#/components/schemas/AssetScanInputScanStats'
+        plugins:
           type: array
           items:
             $ref: '#/components/schemas/AssetScanInputScanStats'
@@ -3239,6 +3273,14 @@ components:
             $ref: '#/components/schemas/InfoFinderInfo'
           nullable: true
 
+    PluginScan:
+      type: object
+      properties:
+        status:
+          $ref: "#/components/schemas/ScannerStatus"
+        output:
+          $ref: '#/components/schemas/PluginOutput'
+
     InfoFinderInfo:
       type: object
       properties:
@@ -3450,6 +3492,42 @@ components:
                   Rootkit: '#/components/schemas/RootkitFindingInfo'
                   Exploit: '#/components/schemas/ExploitFindingInfo'
                   InfoFinder: '#/components/schemas/InfoFinderFindingInfo'
+
+    PluginOutput:
+      type: object
+      properties:
+        packages:
+          type: array
+          items:
+            $ref: '#/components/schemas/Package'
+        vulnerabilities:
+          type: array
+          items:
+            $ref: '#/components/schemas/Vulnerability'
+        malware:
+          type: array
+          items:
+            $ref: '#/components/schemas/Malware'
+        secrets:
+          type: array
+          items:
+            $ref: '#/components/schemas/Secret'
+        misconfigurations:
+          type: array
+          items:
+            $ref: '#/components/schemas/Misconfiguration'
+        rootkits:
+          type: array
+          items:
+            $ref: '#/components/schemas/Rootkit'
+        exploits:
+          type: array
+          items:
+            $ref: '#/components/schemas/Exploit'
+        infoFinder:
+          type: array
+          items:
+            $ref: '#/components/schemas/InfoFinderInfo'
 
     ScanEstimations:
       type: object
